welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:13: error: '(' expected but '{' found.
	while {
              ^