welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var c:Int=0
	do {
		for (x<-0 to  getMondeHauteur()-1)
		{
			for (y<-0 to getMondeHauteur()-1)
			{
				critMessage(c)
				setPos(x+1,y+1)
				c=c+1
			}
		}
	}
	while {
		setPos(x,y)!=getPos(getMondeHauteur()-1,getMondeHauteur()-1)
	}
	
}
